--- a/.gitignore
+++ b/.gitignore
@@ -172,4 +172,7 @@ poetry.toml
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
+# Project folders
 data
+wandb
+solvro-introduction
